[tool.poetry]
name = "lcp-surgeon"
version = "0.1.0"
description = ""
authors = ["ApprenticeofEnder <perfknight@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
